# internal/api/cart.go
@@ -11,20 +11,12 @@ import (
 	"github.com/thanhphuocnguyen/go-eshop/internal/db/sqlc"
 )
 
-type createCartRequest struct {
-	UserID int64 `json:"user_id" binding:"required"`
+type updateCartItemRequest struct {
+	ID       int64 `json:"id" binding:"required,gt=0"`
+	Quantity int16 `json:"quantity" binding:"required,gt=0"`
 }
 
-type itemUpdate struct {
-	ProductID int64 `json:"product_id" binding:"required"`
-	Quantity  int16 `json:"quantity" binding:"required"`
-}
-type updateCartRequest struct {
-	CartID int64        `json:"cart_id" binding:"required"`
-	Items  []itemUpdate `json:"items" binding:"required"`
-}
-
-type cartItem struct {
+type cartItemResponse struct {
 	ID          int64   `json:"id"`
 	ProductID   int64   `json:"product_id"`
 	Name        string  `json:"name"`
@@ -36,16 +28,15 @@ type cartItem struct {
 }
 
 type cartResponse struct {
-	ID           int64      `json:"id"`
-	CheckedOutAt time.Time  `json:"checked_out"`
-	UserID       int64      `json:"user_id"`
-	UpdatedAt    time.Time  `json:"updated_at"`
-	CreatedAt    time.Time  `json:"created_at"`
-	CartItems    []cartItem `json:"cart_items"`
+	ID           int64              `json:"id"`
+	CheckedOutAt time.Time          `json:"checked_out"`
+	UserID       int64              `json:"user_id"`
+	UpdatedAt    time.Time          `json:"updated_at"`
+	CreatedAt    time.Time          `json:"created_at"`
+	CartItems    []cartItemResponse `json:"cart_items"`
 }
 
 type addProductToCartRequest struct {
-	CartID    int64 `json:"cart_id" binding:"required"`
 	ProductID int64 `json:"product_id" binding:"required"`
 	Quantity  int16 `json:"quantity" binding:"required"`
 }
@@ -61,6 +52,41 @@ type checkoutRequest struct {
 	PaymentType string `json:"payment_type" binding:"required"`
 }
 
+// ------------------------------ Mappers ------------------------------
+
+func mapToCartResponse(cartItems []sqlc.GetCartDetailRow) cartResponse {
+	if len(cartItems) == 0 {
+		return cartResponse{}
+	}
+
+	products := make([]cartItemResponse, 0)
+	for _, item := range cartItems {
+		product := item.Product
+		cartItem := item.CartItem
+		prodPrice, _ := product.Price.Float64Value()
+		products = append(products, cartItemResponse{
+			ID:          cartItem.ID,
+			ProductID:   product.ID,
+			Name:        product.Name,
+			Description: product.Description,
+			SKU:         product.Sku,
+			ImageURL:    product.ImageUrl.String,
+			Quantity:    cartItem.Quantity,
+			Price:       float64(cartItem.Quantity) * prodPrice.Float64,
+		})
+	}
+	cart := cartItems[0].Cart
+
+	return cartResponse{
+		ID:           cart.ID,
+		CheckedOutAt: cart.CheckedOutAt.Time,
+		UserID:       cart.UserID,
+		UpdatedAt:    cart.UpdatedAt,
+		CreatedAt:    cart.CreatedAt,
+		CartItems:    products,
+	}
+}
+
 // ------------------------------ Handlers ------------------------------
 
 // CreateCart godoc
@@ -69,20 +95,33 @@ type checkoutRequest struct {
 // @Description create a new cart for a user
 // @Tags carts
 // @Accept json
-// @Param input body createCartRequest true "Cart input"
 // @Produce json
 // @Success 200 {object} cartResponse
 // @Failure 400 {object} gin.H
 // @Failure 500 {object} gin.H
 // @Router /carts [post]
 func (sv *Server) createCart(c *gin.Context) {
-	var cart createCartRequest
-	if err := c.ShouldBindJSON(&cart); err != nil {
-		c.JSON(http.StatusBadRequest, errorResponse(err))
+	authPayload, ok := c.MustGet(authorizationPayload).(*auth.Payload)
+	if !ok {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "user not found"})
+		return
+	}
+	user, err := sv.postgres.GetUserByID(c, authPayload.UserID)
+	if err != nil {
+		if errors.Is(err, postgres.ErrorRecordNotFound) {
+			c.JSON(http.StatusNotFound, gin.H{"error": "user is not existed"})
+			return
+		}
+		c.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+	_, err = sv.postgres.GetCart(c, authPayload.UserID)
+	if err == nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "cart already existed"})
 		return
 	}
 
-	newCart, err := sv.postgres.CreateCart(c, cart.UserID)
+	newCart, err := sv.postgres.CreateCart(c, user.ID)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, errorResponse(err))
 		return
@@ -102,45 +141,27 @@ func (sv *Server) createCart(c *gin.Context) {
 // @Failure 500 {object} gin.H
 // @Router /carts [get]
 func (sv *Server) getCart(c *gin.Context) {
-	userID := c.GetInt64("user_id")
-
-	cart, err := sv.postgres.GetCartDetail(c, userID)
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, errorResponse(err))
+	authPayload, ok := c.MustGet(authorizationPayload).(*auth.Payload)
+	if !ok {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "user not found"})
 		return
 	}
 
-	c.JSON(http.StatusOK, mapToCartResponse(cart))
-}
-
-func mapToCartResponse(cart []sqlc.GetCartDetailRow) cartResponse {
-	if len(cart) == 0 {
-		return cartResponse{}
+	cartDetails, err := sv.postgres.GetCartDetail(c, authPayload.UserID)
+	if err != nil {
+		if errors.Is(err, postgres.ErrorRecordNotFound) {
+			c.JSON(http.StatusNotFound, gin.H{"error": "cart not found"})
+			return
+		}
+		c.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+	if len(cartDetails) == 0 {
+		c.JSON(http.StatusNotFound, gin.H{"error": "cart not found"})
+		return
 	}
 
-	cartItems := make([]cartItem, 0)
-	for _, item := range cart {
-		prodPrice, _ := item.Product.Price.Float64Value()
-		cartItems = append(cartItems, cartItem{
-			ID:          item.CartItem.ID,
-			ProductID:   item.Product.ID,
-			Name:        item.Product.Name,
-			Description: item.Product.Description,
-			SKU:         item.Product.Sku,
-			ImageURL:    item.Product.ImageUrl.String,
-			Quantity:    item.CartItem.Quantity,
-			Price:       float64(item.CartItem.Quantity) * prodPrice.Float64,
-		})
-	}
-
-	return cartResponse{
-		ID:           cart[0].Cart.ID,
-		CheckedOutAt: cart[0].Cart.CheckedOutAt.Time,
-		UserID:       cart[0].Cart.UserID,
-		UpdatedAt:    cart[0].Cart.UpdatedAt,
-		CreatedAt:    cart[0].Cart.CreatedAt,
-		CartItems:    cartItems,
-	}
+	c.JSON(http.StatusOK, mapToCartResponse(cartDetails))
 }
 
 // AddProductToCart godoc
@@ -151,46 +172,87 @@ func mapToCartResponse(cart []sqlc.GetCartDetailRow) cartResponse {
 // @Accept json
 // @Param input body addProductToCartRequest true "Add product to cart input"
 // @Produce json
-// @Success 200 {object} gin.H
+// @Success 200 {object} cartResponse
 // @Failure 400 {object} gin.H
 // @Failure 500 {object} gin.H
 // @Router /carts/products [post]
 func (sv *Server) addProductToCart(c *gin.Context) {
+	authPayload, ok := c.MustGet(authorizationPayload).(*auth.Payload)
+	if !ok {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "user not found"})
+		return
+	}
+
 	var req addProductToCartRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
 		c.JSON(http.StatusBadRequest, errorResponse(err))
 		return
 	}
-	var cartId int64
-	cart, err := sv.postgres.GetCart(c, req.CartID)
+
+	product, err := sv.postgres.GetProduct(c, req.ProductID)
 	if err != nil {
-		if err == postgres.ErrorRecordNotFound {
-			newCart, err := sv.postgres.CreateCart(c, req.CartID)
-			if err != nil {
-				c.JSON(http.StatusInternalServerError, errorResponse(err))
-				return
-			}
-			cartId = newCart.ID
-		} else {
+		if errors.Is(err, postgres.ErrorRecordNotFound) {
+			c.JSON(http.StatusNotFound, gin.H{"error": "product not found"})
+			return
+		}
+		c.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+
+	cartDetail, err := sv.postgres.GetCartDetail(c, authPayload.UserID)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+
+	if len(cartDetail) == 0 {
+		newCart, err := sv.postgres.CreateCart(c, authPayload.UserID)
+		if err != nil {
 			c.JSON(http.StatusInternalServerError, errorResponse(err))
 			return
 		}
+
+		cartItem, err := sv.postgres.AddProductToCart(c, sqlc.AddProductToCartParams{
+			ProductID: req.ProductID,
+			CartID:    cartDetail[0].Cart.ID,
+			Quantity:  req.Quantity,
+		})
+
+		if err != nil {
+			c.JSON(http.StatusInternalServerError, errorResponse(err))
+			return
+		}
+
+		cartDetail = append(cartDetail, sqlc.GetCartDetailRow{
+			Cart:     newCart,
+			Product:  product,
+			CartItem: cartItem,
+		})
 	} else {
-		cartId = cart.ID
+		cartItem, err := sv.postgres.AddProductToCart(c, sqlc.AddProductToCartParams{
+			ProductID: req.ProductID,
+			CartID:    cartDetail[0].Cart.ID,
+			Quantity:  req.Quantity,
+		})
+		if err != nil {
+			c.JSON(http.StatusInternalServerError, errorResponse(err))
+			return
+		}
+		cartDetail = append(cartDetail, sqlc.GetCartDetailRow{
+			Cart:     cartDetail[0].Cart,
+			CartItem: cartItem,
+			Product:  product,
+		})
 	}
 
-	_, err = sv.postgres.AddProductToCart(c, sqlc.AddProductToCartParams{
-		ProductID: req.ProductID,
-		CartID:    cartId,
-		Quantity:  req.Quantity,
-	})
+	err = sv.postgres.UpdateCart(c, cartDetail[0].Cart.ID)
 
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, errorResponse(err))
 		return
 	}
 
-	c.JSON(http.StatusOK, "product added to cart")
+	c.JSON(http.StatusOK, mapToCartResponse(cartDetail))
 }
 
 // removeProductFromCart godoc
@@ -237,6 +299,12 @@ func (sv *Server) removeProductFromCart(c *gin.Context) {
 // @Failure 500 {object} gin.H
 // @Router /carts/products [post]
 func (sv *Server) checkout(c *gin.Context) {
+	authPayload, ok := c.MustGet(authorizationPayload).(*auth.Payload)
+	if !ok {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "user not found"})
+		return
+	}
+
 	var req checkoutRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
 		c.JSON(http.StatusBadRequest, errorResponse(err))
@@ -249,7 +317,7 @@ func (sv *Server) checkout(c *gin.Context) {
 		return
 	}
 
-	cart, err := sv.postgres.GetCart(c, req.CartID)
+	cart, err := sv.postgres.GetCart(c, authPayload.UserID)
 	if err != nil {
 		if errors.Is(err, postgres.ErrorRecordNotFound) {
 			c.JSON(http.StatusNotFound, gin.H{"error": "cart not found"})
@@ -282,7 +350,7 @@ func (sv *Server) checkout(c *gin.Context) {
 	c.JSON(http.StatusOK, order.Order)
 }
 
-// updateCartProductItems godoc
+// updateCartItemQuantity godoc
 // @Summary Update product items in the cart
 // @Schemes http
 // @Description update product items in the cart
@@ -294,36 +362,88 @@ func (sv *Server) checkout(c *gin.Context) {
 // @Failure 400 {object} gin.H
 // @Failure 500 {object} gin.H
 // @Router /carts/products [put]
-func (sv *Server) updateCartProductItems(c *gin.Context) {
-	var req updateCartRequest
+func (sv *Server) updateCartItemQuantity(c *gin.Context) {
+	authPayload, ok := c.MustGet(authorizationPayload).(*auth.Payload)
+	if !ok {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "user not found"})
+		return
+	}
+	var req updateCartItemRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
 		c.JSON(http.StatusBadRequest, errorResponse(err))
 		return
 	}
-	errChan := make(chan error)
-	for _, item := range req.Items {
-		go func(item itemUpdate) {
-			err := sv.postgres.UpdateProductQuantity(c, sqlc.UpdateProductQuantityParams{
-				CartID:    req.CartID,
-				ProductID: item.ProductID,
-				Quantity:  item.Quantity,
-			})
-			if err != nil {
-				errChan <- err
-				return
-			}
-		}(item)
+
+	cartDetail, err := sv.postgres.GetCartDetail(c, authPayload.UserID)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
 	}
-	errs := []error{}
-	for err := range errChan {
-		errs = append(errs, err)
-		if len(errs) == len(req.Items) {
-			break
-		}
-	}
-	if len(errs) > 0 {
-		c.JSON(http.StatusInternalServerError, errorsResponse(errs))
+	if len(cartDetail) == 0 {
+		c.JSON(http.StatusNotFound, gin.H{"error": "cart not found"})
+		return
 	}
 
-	c.JSON(http.StatusOK, "cart updated")
+	if cartDetail[0].Cart.UserID != authPayload.UserID {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "cart does not belong to the user"})
+		return
+	}
+
+	for i, item := range cartDetail {
+		if item.CartItem.ID == req.ID {
+			err := sv.postgres.UpdateCartItemQuantity(c, sqlc.UpdateCartItemQuantityParams{
+				ID:       req.ID,
+				Quantity: req.Quantity,
+			})
+			cartDetail[i].CartItem.Quantity = req.Quantity
+			if err != nil {
+				c.JSON(http.StatusInternalServerError, errorResponse(err))
+				return
+			}
+		}
+	}
+
+	c.JSON(http.StatusOK, mapToCartResponse(cartDetail))
+}
+
+// clearCart godoc
+// @Summary  Clear the cart
+// @Schemes http
+// @Description  clear the cart
+// @Tags carts
+// @Accept json
+// @Produce json
+// @Success 200 {object} gin.H
+// @Failure 400 {object} gin.H
+// @Failure 500 {object} gin.H
+// @Router /carts/clear [delete]
+func (sv *Server) clearCart(c *gin.Context) {
+	authPayload, ok := c.MustGet(authorizationPayload).(*auth.Payload)
+	if !ok {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "user not found"})
+		return
+	}
+
+	cart, err := sv.postgres.GetCart(c, authPayload.UserID)
+	if err != nil {
+		if errors.Is(err, postgres.ErrorRecordNotFound) {
+			c.JSON(http.StatusNotFound, gin.H{"error": "cart not found"})
+			return
+		}
+		c.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+
+	if cart.UserID != authPayload.UserID {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "cart does not belong to the user"})
+		return
+	}
+
+	err = sv.postgres.ClearCart(c, cart.ID)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+
+	c.JSON(http.StatusOK, "cart cleared")
 }
